--- a/.storybook/public/languages/ngunnawal.json
+++ b/.storybook/public/languages/ngunnawal.json
@@ -78,6 +78,6 @@
 		"yukkumbruk": "black crow",
 		"yumba": "eel",
 		"wolway": "waterfall",
-		"yuyu": "mopoke (owl)",
+		"yuyu": "mopoke (owl)"
 	}
 }
