--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -22,7 +22,7 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 			Purple: "#472D8C",
 			Grey: "#777777",
 			Black: "#000000",
-			White: "#FFFFFF"
+			White: "#FFFFFF",
 		}}
 	/>
 	<ColorItem
@@ -31,7 +31,7 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 		colors={{
 			Green: "#098660",
 			Red: "#BA2133",
-			Yellow: "#F2C94C"
+			Yellow: "#F2C94C",
 		}}
 	/>
 	<ColorItem
@@ -40,7 +40,7 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 		colors={{
 			Grey: "#777777",
 			MiddleGrey: "#ADADAD",
-			LightGrey: "#F6F6F6"
+			LightGrey: "#F6F6F6",
 		}}
 	/>
 	<ColorItem
