--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -11,6 +11,47 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 	}}
 />
 
+<div class="act-masthead">
+	<div class="act-masthead__container">
+		<div class="act-masthead__content left">ACT Government Design System</div>
+		<div class="act-masthead__content right">
+			<div class="act-masthead__nav">
+				<a
+					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
+					href="#"
+					target="_self"
+					title="Accessibility"
+				>
+					Accessibility
+				</a>
+				<a
+					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
+					href="#"
+					target="_self"
+					title="Language"
+				>
+					Language
+				</a>
+				<a
+					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
+					href="#"
+					target="_self"
+					title="Contact us"
+				>
+					Contact us
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="act-flex">
+<div class="act-flex__container">
+	<div class="act-flex__grid">
+		<div class="act-flex__row">
+			<div class="act-col act-col-sm-12">
+				<div class="act-box">
+
 <h2>Design Tokens</h2>
 <h1>Colours</h1>
 
@@ -135,3 +176,10 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 		</tr>
 	</tbody>
 </table>
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
