--- a/src/0-overview/introduction.stories.mdx
+++ b/src/0-overview/introduction.stories.mdx
@@ -1,4 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
+import Masthead from "../_docs/masthead";
+
 
 <Meta
 	title="Overview/Introduction"
@@ -9,3 +11,7 @@ import { Meta } from "@storybook/addon-docs";
 		},
 	}}
 />
+
+
+<Masthead />
+<Footer />
