--- a/src/0-system/roles.stories.mdx
+++ b/src/0-system/roles.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
 
 <Meta
-	title="Overview/Our ecosystem"
+	title="System/Roles & responsibilities"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
