--- a/src/0-system/changelog.stories.mdx
+++ b/src/0-system/changelog.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
 
 <Meta
-	title="Overview/Roles & responsibilities"
+	title="System/Changes & updates"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
