--- a/src/0-system/ecosystem.stories.mdx
+++ b/src/0-system/ecosystem.stories.mdx
@@ -1,9 +1,7 @@
 import { Meta } from "@storybook/addon-docs";
-import Masthead from "../_docs/masthead";
-
 
 <Meta
-	title="Overview/Introduction"
+	title="System/Our ecosystem"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -11,7 +9,3 @@ import Masthead from "../_docs/masthead";
 		},
 	}}
 />
-
-
-<Masthead />
-<Footer />
