--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Roles & responsibilities"
+	title="System/Introduction"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -36,15 +36,14 @@ import LinkTo from "@storybook/addon-links/react";
 									<li className="act-breadcrumbs__crumb act-h6">
 										<LinkTo
 											className="act-breadcrumbs__crumb__link"
-											kind="system-roles-responsibilities--page"
+											kind="system-introduction--page"
 										>
-											Roles & responsibilities{" "}
-											<i className="fa-solid fa-angle-right"></i>
+											Introduction <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 								</ul>
 							</div>
-							<h1>Roles & responsibilities</h1>
+							<h1>ACT Government Design System</h1>
 						</div>
 					</div>
 				</div>
@@ -58,6 +57,19 @@ import LinkTo from "@storybook/addon-links/react";
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
 							<h2>Introduction</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h2>Navigation Cards</h2>
 						</div>
 					</div>
 				</div>
