--- a/src/0-system/changelog.stories.mdx
+++ b/src/0-system/changelog.stories.mdx
@@ -1,4 +1,9 @@
-import { Meta } from "@storybook/addon-docs";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { linkTo } from "@storybook/addon-links";
+import Masthead from "../_docs/masthead";
+import AoC from "../_docs/aoc";
+import Footer from "../_docs/footer";
+import LinkTo from "@storybook/addon-links/react";
 
 <Meta
 	title="System/Changes & updates"
@@ -9,3 +14,55 @@ import { Meta } from "@storybook/addon-docs";
 		},
 	}}
 />
+
+<div className="act-docs-container">
+	<Masthead />
+	<div className="act-flex act-flex-light-grey-gradient">
+		<div className="act-flex__container act-flex__container-padding-trim">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<div className="act-breadcrumbs">
+								<ul className="act-breadcrumbs__container">
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
+											Design System <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-changes-updates--page"
+										>
+											Changes & updates <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+								</ul>
+							</div>
+							<h1>Changes & updates</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h2>Introduction</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<AoC />
+	<Footer />
+</div>
