--- a/src/0-system/technical-info.stories.mdx
+++ b/src/0-system/technical-info.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { linkTo } from "@storybook/addon-links";
+import { linkTo } from '@storybook/addon-links';
 import Masthead from "../_docs/masthead";
 import AoC from "../_docs/aoc";
 import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Roles & responsibilities"
+	title="System/Technical Info"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -36,15 +36,14 @@ import LinkTo from "@storybook/addon-links/react";
 									<li className="act-breadcrumbs__crumb act-h6">
 										<LinkTo
 											className="act-breadcrumbs__crumb__link"
-											kind="system-roles-responsibilities--page"
+											kind="system-technical-info--page"
 										>
-											Roles & responsibilities{" "}
-											<i className="fa-solid fa-angle-right"></i>
+											Technical Info <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 								</ul>
 							</div>
-							<h1>Roles & responsibilities</h1>
+							<h1>Technical Info</h1>
 						</div>
 					</div>
 				</div>
@@ -57,7 +56,22 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
-							<h2>Introduction</h2>
+							<table>
+								<thead>
+									<tr>
+										<th></th>
+										<th></th>
+										<th></th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>Figma</td>
+										<td></td>
+										<td></td>
+									</tr>
+								</tbody>
+							</table>
 						</div>
 					</div>
 				</div>
