--- a/src/2-design-tokens/colours.stories.mdx
+++ b/src/2-design-tokens/colours.stories.mdx
@@ -1,5 +1,9 @@
 import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
+import Masthead from "../_docs/masthead";
+import AoC from "../_docs/aoc";
+import Footer from "../_docs/footer";
+import LinkTo from "@storybook/addon-links/react";
 
 <Meta
 	title="Design Tokens/Colours"
@@ -11,175 +15,177 @@ import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 	}}
 />
 
-<div class="act-masthead">
-	<div class="act-masthead__container">
-		<div class="act-masthead__content left">ACT Government Design System</div>
-		<div class="act-masthead__content right">
-			<div class="act-masthead__nav">
-				<a
-					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
-					href="#"
-					target="_self"
-					title="Accessibility"
-				>
-					Accessibility
-				</a>
-				<a
-					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
-					href="#"
-					target="_self"
-					title="Language"
-				>
-					Language
-				</a>
-				<a
-					class="act-button act-button__inline act-button__inline-white act-button__inline-small"
-					href="#"
-					target="_self"
-					title="Contact us"
-				>
-					Contact us
-				</a>
+<div className="act-docs-container">
+	<Masthead />
+	<div className="act-flex act-flex-light-grey-gradient">
+		<div className="act-flex__container act-flex__container-padding-trim">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<div className="act-breadcrumbs">
+								<ul className="act-breadcrumbs__container">
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
+											Design System <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-overview--page"
+										>
+											Design Tokens <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-colours--page"
+										>
+											Colours <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+								</ul>
+							</div>
+							<h1>Colours</h1>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
-
-<div class="act-flex">
-<div class="act-flex__container">
-	<div class="act-flex__grid">
-		<div class="act-flex__row">
-			<div class="act-col act-col-sm-12">
-				<div class="act-box">
-
-<h2>Design Tokens</h2>
-<h1>Colours</h1>
-
-<ColorPalette>
-	<ColorItem
-		title="act-colours-primary"
-		subtitle="Primary Colours"
-		colors={{
-			Purple: "#472D8C",
-			Grey: "#777777",
-			Black: "#000000",
-			White: "#FFFFFF",
-		}}
-	/>
-	<ColorItem
-		title="act-colours-alerts"
-		subtitle="Alert Colours"
-		colors={{
-			Green: "#098660",
-			Red: "#BA2133",
-			Yellow: "#F2C94C",
-		}}
-	/>
-	<ColorItem
-		title="act-colours-greys"
-		subtitle="Greys"
-		colors={{
-			Grey: "#777777",
-			MiddleGrey: "#ADADAD",
-			LightGrey: "#F6F6F6",
-		}}
-	/>
-	<ColorItem
-		title="act-colours-regions"
-		subtitle="Region Colours"
-		colors={{
-			Belconnen: "#377E7A",
-			InnerCity: "#008FC5",
-			Gungahlin: "#90A630",
-			Tuggeranong: "#C6B30B",
-			Wooden: "#F15F50",
-		}}
-	/>
-	<ColorItem
-		title="act-colours-districts"
-		subtitle="District Colours"
-		colors={{
-			InnerNorth: "#008FC5",
-			InnerSouth: "#004868",
-			Wooden: "#F15F50",
-			WestonCreek: "#F14C76",
-			MolongloValley: "#93171B",
-		}}
-	/>
-	<ColorItem
-		title="act-colours-health"
-		subtitle="ACT Health Colours"
-		colors={{
-			DarkBlue: "#2C4EAB",
-			LightBlue: "#0076C8",
-		}}
-	/>
-</ColorPalette>
-
-<table>
-	<thead>
-		<tr>
-			<td>Colour</td>
-			<td>Hex</td>
-			<td>SASS Variable</td>
-			<td>SASS Map</td>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>Purple</td>
-			<td>
-				<code>#472D8C</code>
-			</td>
-			<td>
-				<code>$act-colour__purple</code>
-			</td>
-			<td>
-				<code>map-get($act-colour, "purple")</code>
-			</td>
-		</tr>
-		<tr>
-			<td>Grey</td>
-			<td>
-				<code>#777777</code>
-			</td>
-			<td>
-				<code>$act-colour__grey</code>
-			</td>
-			<td>
-				<code>map-get($act-colour, "grey")</code>
-			</td>
-		</tr>
-		<tr>
-			<td>Black</td>
-			<td>
-				<code>#000000</code>
-			</td>
-			<td>
-				<code>$act-colour__black</code>
-			</td>
-			<td>
-				<code>map-get($act-colour, "black")</code>
-			</td>
-		</tr>
-		<tr>
-			<td>White</td>
-			<td>
-				<code>#FFFFFF</code>
-			</td>
-			<td>
-				<code>$act-colour__purple</code>
-			</td>
-			<td>
-				<code>map-get($act-colour, "purple")</code>
-			</td>
-		</tr>
-	</tbody>
-</table>
-
-</div>
-</div>
-</div>
-</div>
-</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h2>Primary Colours</h2>
+							<ColorPalette>
+								<ColorItem
+									title="Purple"
+									subtitle="Some of the purples"
+									colors={{
+										Purple: "#472D8C",
+									}}
+								/>
+								<ColorItem
+									title="Purples"
+									subtitle="Some of the purples"
+									colors={{
+										Violet: "#1E0F48",
+										Indigo: "#311C6A",
+										PlumPurple: "#6042AE",
+										MediumPurple: "#9A78F2",
+									}}
+								/>
+								<ColorItem
+									title="Greys"
+									subtitle="Some of the greys"
+									colors={{
+										Black: "#111111",
+										Grey: "#777777",
+										MiddleGrey: "#ADADAD",
+										White: "#FFFFFF",
+									}}
+								/>
+							</ColorPalette>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h2>Interface Colours</h2>
+							<ColorPalette>
+								<ColorItem
+									title="Green"
+									subtitle="Some of the purples"
+									colors={{
+										Green: "#098660",
+									}}
+								/>
+								<ColorItem
+									title="Red"
+									subtitle="Some of the greys"
+									colors={{
+										Red: "#BA2133",
+									}}
+								/>
+								<ColorItem
+									title="Yellow"
+									subtitle="Some of the greys"
+									colors={{
+										Red: "#F2C94C",
+									}}
+								/>
+							</ColorPalette>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h3>Region Colours</h3>
+							<ColorPalette>
+								<ColorItem
+									title="Belconnen"
+									subtitle="Some of the purples"
+									colors={{
+										Belconnen: "#377E7A",
+									}}
+								/>
+								<ColorItem
+									title="Gungahlin"
+									subtitle="Some of the greys"
+									colors={{
+										Gungahlin: "#90A630",
+									}}
+								/>
+								<ColorItem
+									title="Inner City"
+									subtitle="Some of the greys"
+									colors={{
+										InnerCity: "#008FC5",
+									}}
+								/>
+								<ColorItem
+									title="Tuggeranong"
+									subtitle="Some of the greys"
+									colors={{
+										Tuggeranong: "#C6B30B",
+									}}
+								/>
+								<ColorItem
+									title="Wooden"
+									subtitle="Some of the greys"
+									colors={{
+										Wooden: "#F15F50",
+									}}
+								/>
+							</ColorPalette>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<AoC />
+	<Footer />
 </div>
