--- a/src/2-design-tokens/typography.stories.mdx
+++ b/src/2-design-tokens/typography.stories.mdx
@@ -1,4 +1,9 @@
-import { Meta, Typeset } from "@storybook/addon-docs/blocks";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
+import { linkTo } from "@storybook/addon-links";
+import Masthead from "../_docs/masthead";
+import AoC from "../_docs/aoc";
+import Footer from "../_docs/footer";
+import LinkTo from "@storybook/addon-links/react";
 
 <Meta
 	title="Design Tokens/Typography"
@@ -10,71 +15,62 @@ import { Meta, Typeset } from "@storybook/addon-docs/blocks";
 	}}
 />
 
-<h2>Design Tokens</h2>
-<h1>Typography</h1>
-
-export const typography = {
-	type: {
-		primary: '"Montserrat", sans-serif',
-	},
-	weight: {
-		regular: "400",
-		semibold: "600",
-		bold: "700",
-	},
-	size: {
-		a1: 48,
-		a2: 40,
-		a3: 32,
-		a4: 24,
-		a5: 20,
-		a6: 16,
-	},
-};
-
-export const SampleText = "The quick brown fox jumps over the lazy dog";
-
-<h3>Montserrat 400 Regular</h3>
-<Typeset
-	fontSizes={[
-		Number(typography.size.a1),
-		Number(typography.size.a2),
-		Number(typography.size.a3),
-		Number(typography.size.a4),
-		Number(typography.size.a5),
-		Number(typography.size.a6),
-	]}
-	fontWeight={typography.weight.regular}
-	sampleText={SampleText}
-	fontFamily={typography.type.primary}
-/>
-
-<h3>Montserrat 600 Semibold</h3>
-<Typeset
-	fontSizes={[
-		Number(typography.size.a1),
-		Number(typography.size.a2),
-		Number(typography.size.a3),
-		Number(typography.size.a4),
-		Number(typography.size.a5),
-		Number(typography.size.a6),
-	]}
-	fontWeight={typography.weight.semibold}
-	sampleText={SampleText}
-	fontFamily={typography.type.primary}
-/>
-
-<h3>Montserrat 700 Bold</h3>
-<Typeset
-	fontSizes={[
-		Number(typography.size.a1),
-		Number(typography.size.a2),
-		Number(typography.size.a3),
-		Number(typography.size.a4),
-		Number(typography.size.a5),
-		Number(typography.size.a6),
-	]}
-	fontWeight={typography.weight.bold}
-	sampleText={SampleText}
-	fontFamily={typography.type.primary}
-/>
+<div className="act-docs-container">
+	<Masthead />
+	<div className="act-flex act-flex-light-grey-gradient">
+		<div className="act-flex__container act-flex__container-padding-trim">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<div className="act-breadcrumbs">
+								<ul className="act-breadcrumbs__container">
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="system-introduction--page"
+										>
+											Design System <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-overview--page"
+										>
+											Design Tokens <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="design-tokens-typography--page"
+										>
+											Typography <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+								</ul>
+							</div>
+							<h1>Typography</h1>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div className="act-flex">
+		<div className="act-flex__container">
+			<div className="act-flex__grid">
+				<div className="act-flex__row">
+					<div className="act-col act-col-sm-12">
+						<div className="act-box">
+							<h2>Introduction</h2>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<AoC />
+	<Footer />
+</div>
