--- a/src/4-components/A1-Accordion/a1-accordion.stories.mdx
+++ b/src/4-components/A1-Accordion/a1-accordion.stories.mdx
@@ -1,12 +1,12 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import { linkTo } from "@storybook/addon-links";
-import Masthead from "../_docs/masthead";
-import AoC from "../_docs/aoc";
-import Footer from "../_docs/footer";
+import Masthead from "../../_docs/masthead";
+import AoC from "../../_docs/aoc";
+import Footer from "../../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Roles & responsibilities"
+	title="Components/Accordion/Details"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -36,15 +36,22 @@ import LinkTo from "@storybook/addon-links/react";
 									<li className="act-breadcrumbs__crumb act-h6">
 										<LinkTo
 											className="act-breadcrumbs__crumb__link"
-											kind="system-roles-responsibilities--page"
+											kind="components-overview--page"
 										>
-											Roles & responsibilities{" "}
-											<i className="fa-solid fa-angle-right"></i>
+											Components <i className="fa-solid fa-angle-right"></i>
+										</LinkTo>
+									</li>
+									<li className="act-breadcrumbs__crumb act-h6">
+										<LinkTo
+											className="act-breadcrumbs__crumb__link"
+											kind="components-accordion-details--page"
+										>
+											Accordion <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 								</ul>
 							</div>
-							<h1>Roles & responsibilities</h1>
+							<h1>Accordion</h1>
 						</div>
 					</div>
 				</div>
