--- a/src/6-previews/0-overview.stories.mdx
+++ b/src/6-previews/0-overview.stories.mdx
@@ -6,7 +6,7 @@ import Footer from "../_docs/footer";
 import LinkTo from "@storybook/addon-links/react";
 
 <Meta
-	title="System/Roles & responsibilities"
+	title="Previews/Overview"
 	parameters={{
 		previewTabs: {
 			canvas: { hidden: true },
@@ -36,15 +36,14 @@ import LinkTo from "@storybook/addon-links/react";
 									<li className="act-breadcrumbs__crumb act-h6">
 										<LinkTo
 											className="act-breadcrumbs__crumb__link"
-											kind="system-roles-responsibilities--page"
+											kind="previews-overview--page"
 										>
-											Roles & responsibilities{" "}
-											<i className="fa-solid fa-angle-right"></i>
+											Previews <i className="fa-solid fa-angle-right"></i>
 										</LinkTo>
 									</li>
 								</ul>
 							</div>
-							<h1>Roles & responsibilities</h1>
+							<h1>Previews</h1>
 						</div>
 					</div>
 				</div>
