--- a/src/2-design-tokens/spacing.stories.mdx
+++ b/src/2-design-tokens/spacing.stories.mdx
@@ -64,7 +64,83 @@ import LinkTo from "@storybook/addon-links/react";
 				<div className="act-flex__row">
 					<div className="act-col act-col-sm-12">
 						<div className="act-box">
-							<h2>Introduction</h2>
+							<p>Consistent use of spacing provides the foundation for harmonious and accurately positioned elements onscreen.</p>
+							<p>Spacing follows a 4-pixel unit in this system, with each spacing variable evenly divisible by 4.</p>
+							<p>Spacing in this system is available as both Sass Variables and Maps.</p>
+							<div className="act-img">
+								<img src="/images/2-design-tokens-spacing-1.png" alt="Illustration of the available spacing variables"/>
+								<div className="act-img__description act-p-small">
+									<i class="fa-solid fa-circle-info"></i> Illustration of the available spacing variables
+								</div>
+							</div>
+							<div className="act-table-container">
+								<table className="act-table">
+									<thead>
+										<tr>
+											<th>Token Name</th>
+											<th>Value</th>
+											<th>Sass Variable</th>
+											<th>Sass Map</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Space 0</td>
+											<td><code>4px</code></td>
+											<td><code className="sass-var">$act-space__desktop-0</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-0")</code></td>
+										</tr>
+										<tr>
+											<td>Space 1</td>
+											<td><code>8px</code></td>
+											<td><code className="sass-var">$act-space__desktop-1</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-1")</code></td>
+										</tr>
+										<tr>
+											<td>Space 2</td>
+											<td><code>16px</code></td>
+											<td><code className="sass-var">$act-space__desktop-2</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-2")</code></td>
+										</tr>
+										<tr>
+											<td>Space 3</td>
+											<td><code>24px</code></td>
+											<td><code className="sass-var">$act-space__desktop-3</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-3")</code></td>
+										</tr>
+										<tr>
+											<td>Space 4</td>
+											<td><code>32px</code></td>
+											<td><code className="sass-var">$act-space__desktop-4</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-4")</code></td>
+										</tr>
+										<tr>
+											<td>Space 5</td>
+											<td><code>48px</code></td>
+											<td><code className="sass-var">$act-space__desktop-5</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-5")</code></td>
+										</tr>
+										<tr>
+											<td>Space 6</td>
+											<td><code>64px</code></td>
+											<td><code className="sass-var">$act-space__desktop-6</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-6")</code></td>
+										</tr>
+										<tr>
+											<td>Space 7</td>
+											<td><code>80px</code></td>
+											<td><code className="sass-var">$act-space__desktop-7</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-7")</code></td>
+										</tr>
+										<tr>
+											<td>Space 8</td>
+											<td><code>124px</code></td>
+											<td><code className="sass-var">$act-space__desktop-8</code></td>
+											<td><code className="sass-var">map-get($act-space, "desktop-8")</code></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 						</div>
 					</div>
 				</div>
