--- a/src/0-system/0-introduction.stories.mdx
+++ b/src/0-system/0-introduction.stories.mdx
@@ -54,22 +54,74 @@ import LinkTo from "@storybook/addon-links/react";
 		<div className="act-flex__container">
 			<div className="act-flex__grid">
 				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<h2>Introduction</h2>
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="system-introduction--page"
+							>
+								System
+							</LinkTo>
 						</div>
 					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div className="act-flex">
-		<div className="act-flex__container">
-			<div className="act-flex__grid">
-				<div className="act-flex__row">
-					<div className="act-col act-col-sm-12">
+					<div className="act-col act-col-sm-3">
 						<div className="act-box">
-							<h2>Navigation Cards</h2>
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="guidelines-overview--page"
+							>
+								Guidelines
+							</LinkTo>
+						</div>
+					</div>
+					<div className="act-col act-col-sm-3">
+						<div className="act-box">
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="design-tokens-overview--page"
+							>
+								Design Tokens
+							</LinkTo>
+						</div>
+					</div>
+					<div className="act-col act-col-sm-3">
+						<div className="act-box">
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="layout-overview--page"
+							>
+								Layout
+							</LinkTo>
+						</div>
+					</div>
+					<div className="act-col act-col-sm-3">
+						<div className="act-box">
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="components-overview--page"
+							>
+								Components
+							</LinkTo>
+						</div>
+					</div>
+					<div className="act-col act-col-sm-3">
+						<div className="act-box">
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="patterns-overview--page"
+							>
+								Patterns
+							</LinkTo>
+						</div>
+					</div>
+					<div className="act-col act-col-sm-3">
+						<div className="act-box">
+							<LinkTo
+								className="act-button act-button__normal act-button__primary"
+								kind="previews-overview--page"
+							>
+								Previews
+							</LinkTo>
 						</div>
 					</div>
 				</div>
